Toolbox: Add max-width to wp-caption to prevent overflow
git-svn-id: https://wpcom-themes.svn.automattic.com/toolbox@8529 d957f892-c61d-0410-b221-f235e6eecf30

--- a/style.css
+++ b/style.css
@@ -293,7 +293,8 @@ img.size-full,
 img.size-large,
 img.size-medium,
 .attachment img,
-.widget-area img {
+.widget-area img,
+.wp-caption {
 	max-width: 100%; /* When images are too wide for containing element, force them to fit. */
 	height: auto; /* Override height to match resized width for correct aspect ratio. */
 }
